PLANET-7608: Fix Quick Links layout issues on small screens
Ref: https://jira.greenpeace.org/browse/PLANET-7608

- Apply different items width according to small screens
- It should be visible a tiny part of the last item visible on viewport

--- a/assets/src/scss/layout/_wide-blocks.scss
+++ b/assets/src/scss/layout/_wide-blocks.scss
@@ -1,15 +1,7 @@
 // .block-wide kept for BC of existing content.
 // Can be removed once no content uses it anymore.
 .alignfull, .block-wide {
-  width: 100vw;
-  //     Screen width - block width
-  //  -  --------------------------
-  //                  2
-  margin-left: calc(((100vw - 100%) / 2) * -1);
-
-  html[dir="rtl"] & {
-    margin-right: calc(((100vw - 100%) / 2) * -1);
-  }
+  @include wide-block;
 
   .block-editor & {
     width: 100%;
